[gd_scene load_steps=3 format=3 uid="uid://buh2u8mdvm3t1"]

[ext_resource type="Script" uid="uid://bp8kc1x305avo" path="res://scripts/tavern.gd" id="1_ejety"]
[ext_resource type="Texture2D" uid="uid://devh8gcnx1w8p" path="res://assets/sprites/tavern-day-bg.jpg" id="1_ydnal"]

[node name="Tavern" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ejety")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 984.0
offset_bottom = 560.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ydnal")
expand_mode = 1
stretch_mode = 6

[node name="BtnSleep" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 785.0
offset_top = 67.0
offset_right = 897.0
offset_bottom = 98.0
text = "Go to sleep "

[node name="BtnEvents" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 591.0
offset_top = 158.0
offset_right = 703.0
offset_bottom = 189.0
text = "Events"

[node name="BtnFood" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 191.0
offset_top = 258.0
offset_right = 303.0
offset_bottom = 289.0
text = "Eat & drink"

[node name="BtnRumors" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 390.0
offset_top = 408.0
offset_right = 502.0
offset_bottom = 439.0
text = "Rumors"
